QtWebEngine fails poodletest.com. Support for SSL v3 should be disabled, like it is disabled in QtWebKit in Qt 5.4. Tested with quicknanobrowser.
-
Zeno Albisser
-
Ronald Clifford Buckman
- Votes:
-
0 Vote for this issue
- Watchers:
-
5 Start watching this issue
- Created:
- Updated:
- Resolved:
There are no open Gerrit changes
Show
There are 2 closed Gerrit changes
Hide
There are 2 closed Gerrit changes
- <chromium> Force TLS1 as the minimum SSL version.
- Gerrit Review:
- Make TLS1 the default minimum SSL protocol in Qt WebEngine.
- Gerrit Review: