<chromium> Force TLS1 as the minimum SSL version.

The previous minimum SSLv3 was vulnerable against the POODLE attack.

Task-number: QTBUG-43085
Change-Id: I00da7b30cfdc7900c2471ddad1afb7bed4e36bdc
Reviewed-by: Andras Becsi <andras.becsi@theqtcompany.com>
Reviewed-by: Pierre Rossi <pierre.rossi@theqtcompany.com>