chromium/net/ssl/ssl_config.cc
@@ -10,7 +10,7 @@
 
 namespace net {
 
-const uint16 kDefaultSSLVersionMin = SSL_PROTOCOL_VERSION_SSL3;
+const uint16 kDefaultSSLVersionMin = SSL_PROTOCOL_VERSION_TLS1;
 
 const uint16 kDefaultSSLVersionMax =
 #if defined(USE_OPENSSL)
